status bar appearance and some keybinds for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,16 @@
 bind r source-file ~/.tmux.conf
 
+set -a terminal-features "tmux-256color:RGB"
+set -g base-index 1
+set -g mode-keys vi
+
 # set -g status off
+set -g status-position top
+set -g status-justify absolute-centre
+set -g status-style "bg=default"
+set -g window-status-current-style "fg=blue bold"
+set -g status-right ""
+set -g status-left "#S"
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -8,3 +18,11 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# Prefix key to Ctrl+a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+bind v split-window -h
+bind V split-window -v
